--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,3 +22,18 @@ h1 {
     text-align: center;
     color: #fff0f6;
 }
+
+p {
+    position: absolute;
+    width: 109px;
+    height: 27px;
+    left: 629px;
+    top: 230px;
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    text-align: center;
+    color: rgba(255, 240, 246, 0);
+}
