--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,12 @@
+body {
+    background-color: #1f000b;
+}
+
 .container {
     position: absolute;
     width: 300px;
     height: 505px;
     left: 534px;
-    top: 60px
+    top: 60px;
+    text-align: center;
 }
