--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #1f000b;
 }
@@ -6,8 +12,7 @@ body {
     position: absolute;
     width: 300px;
     height: 505px;
-    left: 534px;
-    top: 60px;
+    margin: 60px auto ;
     text-align: center;
 }
 
