--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,16 +6,79 @@
 
 body {
     background-color: #1f000b;
+    font-family: 'Robot', sans-serif;
+}
+
+a{
+    text-decoration: none;
 }
 
 .container {
-    position: absolute;
-    width: 300px;
-    height: 505px;
-    margin: 60px auto ;
     text-align: center;
+    width: 300px;
+    margin: 60px auto;
 }
 
 img {
     width: 100%;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    border: 4px solid #d6336c;
+    padding: 3.7px;
 }
+
+.username {
+    font-family: 'Robot mono', monospace;
+    color: rgba(255, 240, 246, 0.8);
+    font-weight: 400;
+    font-size; 18px;
+    line-height: 150%;
+    text-align: center;
+    font-style: normal;
+}
+
+ul {
+    list-style: none;
+    margin: 48px 0;
+}
+
+h1 {
+    margin-top: 24px;
+    margin-bottom: 8px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 38px;
+    color: #fff0f6;
+    text-align: center;
+}
+
+ul li a {
+    display: flex;
+    height: 53px;
+    align-items: center;
+    justify-content: center;
+    background-color: #D6336C;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 150%;
+    margin-bottom: 16px;
+    border-radius: 6px;
+    transition: background-color 400ms;
+}
+
+ul li a:hover {
+    background-color: #A61E4D;
+}
+
+footer {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    color: rgba(255, 240, 246, 0.6);
+}
+
+
